Add html for item category section

--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
   </section>
   <section class="container categorize">
     <section class="category groceryStore">
-
+      <h2>Grocery Store</h2>
+      <ul></ul>
+      <a href="#" class="clearAllTasks">Clear All Tasks</a>
     </section>
     <section class="category boxStore">
-
+      <h2>Big Box Store</h2>
+      <ul></ul>
+      <a href="#" class="clearAllTasks">Clear All Tasks</a>
     </section>
     <section class="category homeImprovement">
-
+      <h2>Home Improvement Store</h2>
+      <ul></ul>
+      <a href="#" class="clearAllTasks">Clear All Tasks</a>
     </section>
   </section>
   <section class="container">
