Add html for filter section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <section class="container">
     <h2>Grocery Input</h2>
     <form>
-      <input type="text" name="item" id="item" placeholder="Enter item name here">
+      <input type="text" name="item" id="item" placeholder="Enter Item Name Here">
       <select id="category" name="category">
         <option value="select">Select a Store</option>
         <option value="grocery">Grocery</option>
@@ -41,7 +41,8 @@
     </section>
   </section>
   <section class="container">
-
+    <h2>Looking for a specific item?</h2>
+    <input type="text" name="filter" id="filter" placeholder="Enter Item Name Here">
   </section>
  
   <script src="app.js"></script>
