--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <title>Shopping List Application</title>
 </head>
 <body>
-  <h1>Shopping List</h1>
-  <section class="container">
-    <h2>Grocery Input</h2>
+  <h1>My Shopping List</h1>
+  <section class="container simpleSection">
+    <h2>Item Input</h2>
     <form>
       <input type="text" name="item" id="item" placeholder="Enter Item Name Here">
       <select id="category" name="category">
@@ -26,21 +26,21 @@
   <section class="container categorize">
     <section class="category groceryStore">
       <h2>Grocery Store</h2>
+      <h3>Items Needed:</h3>
       <ul></ul>
-      <a href="#" class="clearAllTasks">Clear All Tasks</a>
     </section>
     <section class="category boxStore">
       <h2>Big Box Store</h2>
+      <h3>Items Needed:</h3>
       <ul></ul>
-      <a href="#" class="clearAllTasks">Clear All Tasks</a>
     </section>
-    <section class="category homeImprovement">
+    <section class="category homeImprovementStore">
       <h2>Home Improvement Store</h2>
+      <h3>Items Needed:</h3>
       <ul></ul>
-      <a href="#" class="clearAllTasks">Clear All Tasks</a>
     </section>
   </section>
-  <section class="container">
+  <section class="container simpleSection">
     <h2>Looking for a specific item?</h2>
     <input type="text" name="filter" id="filter" placeholder="Enter Item Name Here">
   </section>
