Add function to sort items into selected category

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>My Shopping List</h1>
   <section class="container simpleSection">
     <h2>Item Input</h2>
-    <form>
+    <form id="itemForm">
       <input type="text" name="item" id="item" placeholder="Enter Item Name Here">
       <select id="category" name="category">
         <option value="select">Select a Store</option>
@@ -27,17 +27,17 @@
     <section class="category groceryStore">
       <h2>Grocery Store</h2>
       <h3>Items Needed:</h3>
-      <ul></ul>
+      <ul class="groceryCollection"></ul>
     </section>
     <section class="category boxStore">
       <h2>Big Box Store</h2>
       <h3>Items Needed:</h3>
-      <ul></ul>
+      <ul class="bigBoxCollection"></ul>
     </section>
     <section class="category homeImprovementStore">
       <h2>Home Improvement Store</h2>
       <h3>Items Needed:</h3>
-      <ul></ul>
+      <ul class="homeImprovementCollection"></ul>
     </section>
   </section>
   <section class="container simpleSection">
