Create deleteItem and deleteItemFrom LS functions

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     <section class="category groceryStore">
       <h2>Grocery Store</h2>
       <h3>Items Needed:</h3>
-      <ul class="groceryCollection"></ul>
+      <ul class="groceryCollection collection"></ul>
     </section>
     <section class="category boxStore">
       <h2>Big Box Store</h2>
       <h3>Items Needed:</h3>
-      <ul class="bigBoxCollection"></ul>
+      <ul class="bigBoxCollection collection"></ul>
     </section>
     <section class="category homeImprovementStore">
       <h2>Home Improvement Store</h2>
       <h3>Items Needed:</h3>
-      <ul class="homeImprovementCollection"></ul>
+      <ul class="homeImprovementCollection collection"></ul>
     </section>
   </section>
   <section class="container simpleSection">
